<resources>
    <string name="app_name">Enkeli</string>

    <string name="out_of_car">OUT OF CAR</string>
    <string name="in_car">IN CAR</string>
    
    <string name="message_turn_on">Please, turn on Enkeli</string>
    <string name="message_specify_notification">Please, specify Notification Message</string>
    <string name="message_app_is_active">Application is active</string>
    <string name="switch_enkeli_is_on">Enkeli is ON</string>
    <string name="switch_enkeli_is_off">Enkeli is OFF</string>
    <string name="label_notification_message">Notification Message</string>
    <string name="hint_customize_message">Tap here to customize your message</string>
    <string name="label_advanced_settings">Advanced settings</string>
    <string name="label_send_notification_after">Send Notification After</string>
    <string name="label_sound">Sound</string>

    <!--General-->
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <string name="location_service_not_enabled">Location is not enabled. Please check your settings.</string>
    <string name="open_location_settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="default_notification_message">Don\'t forget</string>
</resources>
