<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.enkeli.UiActivity">

        <TextView
            android:id="@+id/statusTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:padding="8dp"
            android:textAppearance="@style/TextAppearance.Medium"
            tools:text="Warning" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/enkeliSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:minHeight="@dimen/min_preference_item_height"
            android:padding="8dp"
            android:text="@string/switch_enkeli_is_off"
            android:theme="@style/EnableSwitch"
            android:textAppearance="@style/TextAppearance.Medium" />

        <include layout="@layout/horizontal_divider" />

        <LinearLayout
            android:id="@+id/notificationMessageContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:minHeight="@dimen/min_preference_item_height"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/notificationMessageLabelTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_notification_message"
                android:textAppearance="@style/TextAppearance.Medium" />

            <TextView
                android:id="@+id/notificationMessageTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/hint_customize_message"
                android:textAppearance="@style/TextAppearance.Small.Light" />

        </LinearLayout>


        <TextView
            android:id="@+id/advancedSettingsTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/label_advanced_settings"
            android:textColor="@color/colorAccent" />


        <LinearLayout
            android:id="@+id/notificationTimeContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:minHeight="@dimen/min_preference_item_height"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/selectTimeLabelTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_send_notification_after"
                android:textAppearance="@style/TextAppearance.Medium" />

            <TextView
                android:id="@+id/timeValueTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/hint_customize_message"
                android:textAppearance="@style/TextAppearance.Small.Light" />

        </LinearLayout>

        <include layout="@layout/horizontal_divider" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/soundSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/min_preference_item_height"
            android:padding="8dp"
            android:text="@string/label_sound"
            android:theme="@style/EnableSwitch"
            android:textAppearance="@style/TextAppearance.Medium" />

    </LinearLayout>

</ScrollView>



